--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -4,5 +4,10 @@
     <div class='index'>
         <h2>Status Bay</h2>
         <p>Check out the status on your mech!</p>
+        <ul>
+            {% for mech in mechs %}
+            <li>{{mech}}</li>
+            {% endfor %}
+        </ul>
     </div>
 {% endblock %}
