added names to mobilesuites. experimented with flexbox layout for workshop, wip. added deployment view. set up a view to return json data and added a button to deployed template which calls for json data with ajax

--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -1,8 +1,16 @@
-header {
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
+
+.banner {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10vh;
+    padding: 1rem;
     background-color: teal;
 }
 
@@ -17,7 +25,7 @@ a {
 .flex-box {
     display: flex;
     flex-direction: row;
-    height: 90vh;
+    min-height: 600px;
 }
 
 .sidebar {
@@ -53,4 +61,51 @@ a {
 
 .soft-padding {
     padding: 0.5rem;
+}
+
+.img-wrapper {
+    height: 200px;
+    width: 200px;
+    border: 1px solid white;
+    flex-shrink: 0;
+}
+
+.clear-float {
+    clear: both;
+}
+
+.mech {
+    height: 200px;
+    width: 200px;
+    border: 1px solid white;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.d-inlineblock > li {
+    display: inline-block;
+}
+
+.section-header {
+    padding: 1rem;
+    border-bottom: 1px solid white;
+    text-transform: uppercase;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+
+.workshop-desc {
+    padding-left: 0.5rem;
+    padding-top: 0.5rem;
+    align-self: flex-start;
+}
+
+.padding-bottom {
+    padding-bottom: 0.5rem;
 }
