got rid of the ability to have more than one mobilesuit.

--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -82,6 +82,7 @@ a {
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    margin: 0 0.5rem;
 }
 
 .d-inlineblock > li {
