added comments to everything. refactored code for generating random actions. added a new view function to properly handle departures from outlands

--- a/game/templates/deploy.html
+++ b/game/templates/deploy.html
@@ -5,6 +5,6 @@
         <h2>Deployed</h2>
         <p id='action-view'>You have been deployed to the Outlands using {{mech}}.</p>
         <button id='get_action' style='color: red;'>Continue</button>
-        <a href='{% url "workshop" %}'>Exit</a>
+        <a href='{% url "flee" %}'>Exit</a>
     </div>
 {% endblock %}
