restyled game to include all content within flexbox. made style sheet a little more condensed

--- a/game/templates/base_generic.html
+++ b/game/templates/base_generic.html
@@ -17,12 +17,14 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/reset.css' %}">
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-<script src="{% static 'js/ajax.js' %}"></script>
+
 
 </head>
 
 <body>
   {% block content %}
+  {% endblock %}
+  {% block script %}
   {% endblock %}
 </body>
 </html>
