--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -1,3 +1,6 @@
+
+/* Global styles */
+
 html {
     height: 100%;
 }
@@ -6,107 +9,98 @@ body {
     height: 100%;
 }
 
+
+/* Main UI styles */
+
+.game-container {
+    display: flex;
+    flex-flow: column;
+    flex-grow: 1;
+    height: 100%;
+}
+
 .banner {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    background-color: teal;
-}
-
-h1 {
-    font-size: 2rem;
-}
-
-a {
-    color: rgb(33, 37, 41);
-}
-
-.flex-box {
-    display: flex;
-    flex-direction: row;
-    min-height: 600px;
-}
-
-.sidebar {
-    flex: 2;
-    background-color: rgb(128, 128, 128);
-}
-
-.sidebar > ul {
-    margin-bottom: 2rem;
-}
-
-.sidebar > ul > li {
-    margin-bottom: 0.5rem;
-}
-
-.nav-title {
-    font-size: 1.5rem;
-}
-
-.main {
-    flex: 10;
-    background-color: black;
-    color: white;
-}
-
-.index {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-.soft-padding {
-    padding: 0.5rem;
-}
-
-.img-wrapper {
-    height: 200px;
-    width: 200px;
-    border: 1px solid white;
-    flex-shrink: 0;
-}
-
-.clear-float {
-    clear: both;
-}
-
-.mech {
-    height: 200px;
-    width: 200px;
-    border: 1px solid white;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 0.5rem;
-}
-
-.d-inlineblock > li {
-    display: inline-block;
-}
-
-.section-header {
-    padding: 1rem;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid black;
     text-transform: uppercase;
 }
 
 .row {
     display: flex;
+    flex-grow: 1;
+}
+
+.sidebar {
+    flex: 2;
+    border-right: 1px solid black;
+    display: flex;
+    flex-flow: column;
     align-items: center;
-    padding: 1rem;
 }
 
-.workshop-desc {
-    padding-left: 0.5rem;
-    padding-top: 0.5rem;
-    align-self: flex-start;
+.navigation {
+    margin-top: 1rem;
 }
 
-.padding-bottom {
+.link-header {
+    font-weight: bold;
+    text-transform: uppercase;
     padding-bottom: 0.5rem;
+}
+
+.link-list {
+    padding-bottom: 1rem;
+}
+
+.main {
+    flex: 10;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+.dotted-underline {
+    border-bottom: 1px dotted black;
+}
+
+
+/* Workshop Area */
+
+.welcome-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    text-transform: uppercase;
+    font-size: 1.25rem;
+}
+
+.mech-banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+
+.mech-card {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.mech-equipped {
+    margin-bottom: 1rem;
+}
+
+.mech-equipped > li {
+    margin-bottom: 0.25rem;
+}
+
+.mech-stats > li {
+    margin-bottom: 0.25rem;
 }
