added hit points to suit. built a couple of helper functions for working with the db api to create and view suits. built tests for mobilesuits.

--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -19,6 +19,7 @@
 
                 <h3 class='mech-banner'>Stats</h3>
                 <ul class='mech-stats'>
+                    <li title='Hit points'><span class='dotted-underline'>HP</span>: {{mech.current_hp}}/{{mech.max_hp}}</li>
                     <li title='Total firepower from all equipped weapons'><span class='dotted-underline'>Firepower:</span> {{mech.get_firepower_value}}</li>
                     <li title='Total armor from all equipped gear'><span class='dotted-underline'>Armor:</span> {{mech.get_armor_value}}</li>
                     <li title='Mobile suit speed'><span class='dotted-underline'>Speed:</span> {{mech.get_speed_value}}</li>
