--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -84,6 +84,7 @@ body {
     justify-content: center;
     padding: 1rem;
     text-transform: uppercase;
+    text-decoration: underline;
 }
 
 .mech-card {
