--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -24,7 +24,7 @@
                 <h2 class='link-header'>Customize</h2>
                 <ul class='link-list'>
                     <li><a href='{% url "workshop" %}'>Workshop</a></li>
-                    <li><a href='{% url "equipment" %}'>Equipment</a></li>
+                    <li><a href='{% url "equipment-all" %}'>Equipment</a></li>
                     <li><a href='{% url "store" %}'>Store</a></li>
                 </ul>
 
