--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -3,29 +3,36 @@
 {% block main %}
 
     <header class='welcome-message'>Workshop</header>
-
-    
-
         <div class='mech-card'>
-            <div class='mech-equipment-and-stats-wrapper'>
-                <h2 class='mech-banner'>{{mech}}</h2>
-                <ul class='mech-equipped'>
-                    <li title='A piece of gear that equips to the top of the mobile suit. Provides armor and range of vision.'><span class='dotted-underline'>Helm:</span> {{mech.helm}}</li>
-                    <li title='A piece of gear that equips to the torso of the mobile suit. Provides armor.'><span class='dotted-underline'>Chest:</span> {{mech.chest}}</li>
-                    <li title='A weapon that is equipped over the left arm of the mobile suit.'><span class='dotted-underline'>Left Arm:</span> {{mech.left_arm}}</li>
-                    <li title='A weapon that is equipped over the right arm of the mobile suit.'><span class='dotted-underline'>Right Arm:</span> {{mech.right_arm}}</li>
-                    <li title='A piece of gear that equips over the legs of the mobile suit. Provides armor and speed.'><span class='dotted-underline'>Legs:</span> {{mech.legs}}</li>
-                </ul>
 
-                <h3 class='mech-banner'>Stats</h3>
-                <ul class='mech-stats'>
-                    <li title='Hit points'><span class='dotted-underline'>HP</span>: {{mech.current_hp}}/{{mech.max_hp}}</li>
-                    <li title='Total firepower from all equipped weapons'><span class='dotted-underline'>Firepower:</span> {{mech.get_firepower_value}}</li>
-                    <li title='Total armor from all equipped gear'><span class='dotted-underline'>Armor:</span> {{mech.get_armor_value}}</li>
-                    <li title='Mobile suit speed'><span class='dotted-underline'>Speed:</span> {{mech.get_speed_value}}</li>
-                    <li title='Range of vision'><span class='dotted-underline'>Vision:</span> {{mech.get_sight_value}}</li>
-                </ul>
-            </div>
+            <h2 class='mech-banner'>{{mech}}</h2>
+            <ul class='mech-equipped'>
+                <li title='A piece of gear that equips to the top of the mobile suit. Provides armor and range of vision.'>
+                    <span class='dotted-underline'>Helm:</span> <a href="{% url 'equipment' 'helm' mech.helm.id %}">{{mech.helm}}</a>
+                </li>
+                <li title='A piece of gear that equips to the torso of the mobile suit. Provides armor.'>
+                    <span class='dotted-underline'>Chest:</span> <a href="{% url 'equipment' 'chest' mech.helm.id %}">{{mech.chest}}</a>
+                </li>
+                <li title='A weapon that is equipped over the left arm of the mobile suit.'>
+                    <span class='dotted-underline'>Left Arm:</span> <a href="{% url 'equipment' 'leftarm' mech.helm.id %}">{{mech.left_arm}}</a>
+                </li>
+                <li title='A weapon that is equipped over the right arm of the mobile suit.'>
+                    <span class='dotted-underline'>Right Arm:</span> <a href="{% url 'equipment' 'rightarm' mech.helm.id %}">{{mech.right_arm}}</a>
+                </li>
+                <li title='A piece of gear that equips over the legs of the mobile suit. Provides armor and speed.'>
+                    <span class='dotted-underline'>Legs:</span> <a href="{% url 'equipment' 'legs' mech.helm.id %}">{{mech.legs}}</a>
+                </li>
+            </ul>
+
+            <h3 class='mech-banner'>Stats</h3>
+            <ul class='mech-stats'>
+                <li title='Hit points'><span class='dotted-underline'>HP</span>: {{mech.current_hp}}/{{mech.max_hp}}</li>
+                <li title='Total firepower from all equipped weapons'><span class='dotted-underline'>Firepower:</span> {{mech.get_firepower_value}}</li>
+                <li title='Total armor from all equipped gear'><span class='dotted-underline'>Armor:</span> {{mech.get_armor_value}}</li>
+                <li title='Mobile suit speed'><span class='dotted-underline'>Speed:</span> {{mech.get_speed_value}}</li>
+                <li title='Range of vision'><span class='dotted-underline'>Vision:</span> {{mech.get_sight_value}}</li>
+            </ul>
+
         </div>
 
 {% endblock %}
