--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -3,6 +3,11 @@
 
 html {
     height: 100%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body {
@@ -36,9 +41,7 @@ body {
 .sidebar {
     flex: 2;
     border-right: 1px solid black;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
+    padding: 0.5rem;
 }
 
 .navigation {
@@ -55,11 +58,12 @@ body {
     padding-bottom: 1rem;
 }
 
+.link-list> li {
+    padding-bottom: 0.25rem;
+}
+
 .main {
     flex: 10;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
 }
 
 .dotted-underline {
@@ -78,30 +82,71 @@ body {
     font-size: 1.25rem;
 }
 
+.mech-card {
+    margin: 1rem;
+}
+
 .mech-banner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
+    padding-bottom: 1rem;
     text-transform: uppercase;
     text-decoration: underline;
 }
 
-.mech-card {
+.mech-equipped {
+    margin-bottom: 1.5rem;
+}
+
+.mech-equipped > li, .mech-stats > li {
+    margin-bottom: 0.25rem;
+}
+
+
+/* Deployment / Outlands */
+
+.deployment-container {
     display: flex;
-    flex-flow: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
 }
 
-.mech-equipped {
-    margin-bottom: 1rem;
+.deployed-card {
+    width: 500px;
+    height: 400px;
+    display: flex;
+    flex-flow: column;
 }
 
-.mech-equipped > li {
-    margin-bottom: 0.25rem;
+.deployed-card-image {
+    width: 150px;
+    height: 150px;
+    border: 1px solid black;
+    margin: 16px;
+    flex-shrink: 0;
 }
 
-.mech-stats > li {
-    margin-bottom: 0.25rem;
+.deployed-card-text {
+    padding: 1rem;
+}
+
+.deployed-card-button-group {
+    border: 1px dashed black;
+    border-radius: 16px;
+    padding: 1rem;
+}
+
+button#exit-to-workshop {
+    float: right;
+}
+
+button#continue-patrol {
+
+}
+
+button#attack {
+
+}
+
+button#flee {
+    margin-left: 1rem;
 }
