added in some event classes and redesigned function that returns random events. all api endpoints are in their own file. classes for mechs and classes for events have been organized into their own files. views no longer crash when user does not possess a mech. database destroyed and rebuilt

--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -3,8 +3,8 @@
 {% block main %}
 
     <header class='welcome-message'>Workshop</header>
+    {% if mech %}
         <div class='mech-card'>
-
             <h2 class='mech-banner'>MECH</h2>
             <ul class='mech-equipped'>
                 <li>Name: {{mech}}</li>
@@ -33,7 +33,7 @@
                 <li title='Mobile suit speed'><span class='dotted-underline'>Speed:</span> {{mech.get_speed_value}}</li>
                 <li title='Range of vision'><span class='dotted-underline'>Vision:</span> {{mech.get_sight_value}}</li>
             </ul>
-
         </div>
+        {% endif %}
 
 {% endblock %}
