--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -4,6 +4,7 @@
 html {
     height: 100%;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 *, *:before, *:after {
@@ -26,8 +27,10 @@ main.Game {
 header.Banner {
     display: flex;
     justify-content: space-around;
-    padding: 2rem;
+    padding: 1.5rem;
     background-color: grey;
+    text-transform: uppercase;
+    font-size: 1.5rem;
 }
 
 h1.BannerText {
@@ -38,7 +41,6 @@ h1.BannerText {
 
 nav.Navigation {
     display: flex;
-    justify-content: space-around;
     background-color: lightgrey;
 }
 
@@ -48,12 +50,12 @@ nav.Navigation > a {
     color: black;
     font-weight: bold;
     text-decoration: none;
-    padding: 1rem;
+    font-size: 0.9rem;
+    padding: 0.75rem;
 }
 
 nav.Navigation > a:hover {
     background-color: grey;
-    text-decoration: underline;
 }
 
 .row {
