--- a/game/templates/deploy.html
+++ b/game/templates/deploy.html
@@ -1,25 +1,30 @@
 {% extends "game.html" %}
 
 {% block main %}
-    <div class='deployment-container'>
-        <div class='deployed-card'>
+    <div class='Deployed'>
+        <div class='DeployedCard'>
             <div class='row'>
                 <div class='deployed-card-image'><img src='' id='img' /></div>
-                <h2 id='title'></h2>
-                <p class='deployed-card-text' id='desc'>You have been deployed to the Outlands.</p>
-                <p id='discovered'></p>
+                <div class='deployed-card-message'>
+                    <h2 id='title'>Deployed</h2>
+                    <p class='deployed-card-text' id='desc'>You have been deployed to the Outlands.</p>
+                    <p id='discovered'>Nothing has happened yet</p>
+                </div>
             </div>
 
-            <div class='arena'>
-                <div id='enemy'></div>
-                <div id='mech'></div>
-            </div>
+            <div class='row'>
+                <div class='arena'>
+                    <div id='enemy'>Enemy!</div>
+                    <div id='mech'>Mech!</div>
+                </div>
 
-            <div class='loot'>
-                <ul id='lootinv'>
+                <div class='loot'>
+                    <ul id='lootinv'>
 
-                </ul>
+                    </ul>
+                </div>
             </div>
+            
             
             <div class='deployed-card-button-group' id='btngrp'>
                 <button id='get_action'>Continue</button>
