--- a/game/templates/equipment.html
+++ b/game/templates/equipment.html
@@ -15,6 +15,10 @@
         <p>Firepower: {{piece.firepower}}</p>
         {% endif %}
 
+        {% if piece.firerate %}
+        <p>Firerate: {{piece.firerate}}</p>
+        {% endif %}
+
         {% if piece.sight %}
         <p>Vision: {{piece.sight}}</p>
         {% endif %}
