--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -133,7 +133,7 @@ div#view {
 div.DeployedCardImage {
     width: 150px;
     height: 150px;
-    border: 1px solid black;
+    background-color: white;
     margin: 1rem;
     flex-shrink: 0;
 }
