the deployment area now updates its ui by img, title, desc and buttons. only the getrandomevent function is hooked up to the buttons at this time

--- a/game/templates/deploy.html
+++ b/game/templates/deploy.html
@@ -27,9 +27,9 @@
                 </div>
             </div>
             
-            <div class='DeployedCardButtonGroup' id='btngrp'>
+            <div class='DeployedCardButtonGroup'>
 
-                <div class='ActionButtons'>
+                <div class='ActionButtons' id='btngrp'>
                     <button id='continue'>Continue</button>
                 </div>
 
