--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -1,12 +1,12 @@
 {% extends "game.html" %}
 
 {% block main %}
-
-    <header class='welcome-message'>Workshop</header>
-    {% if mech %}
-        <div class='mech-card'>
-            <h2 class='mech-banner'>MECH</h2>
-            <ul class='mech-equipped'>
+    <div class='Workshop'>
+        <header class='WorkshopHeader'>Workshop</header>
+        {% if mech %}
+        <div class='MechCard'>
+            <h2 class='MechBanner'>MECH</h2>
+            <ul class='MechEquipment'>
                 <li>Name: {{mech}}</li>
                 <li title='A piece of gear that equips to the top of the mobile suit. Provides armor and range of vision.'>
                     <span class='dotted-underline'>Helm:</span> <a href="{% url 'equipment' 'helm' mech.helm.id %}">{{mech.helm}}</a>
@@ -25,8 +25,8 @@
                 </li>
             </ul>
 
-            <h3 class='mech-banner'>Stats</h3>
-            <ul class='mech-stats'>
+            <h3 class='MechBanner'>Stats</h3>
+            <ul class='MechStatBlock'>
                 <li title='Hit points'><span class='dotted-underline'>HP</span>: {{mech.current_hp}}/{{mech.max_hp}}</li>
                 <li title='Total firepower from all equipped weapons'><span class='dotted-underline'>Firepower:</span> {{mech.get_firepower_value}}</li>
                 <li title='Total armor from all equipped gear'><span class='dotted-underline'>Armor:</span> {{mech.get_armor_value}}</li>
@@ -35,5 +35,6 @@
             </ul>
         </div>
         {% endif %}
-
+    </div>
+    
 {% endblock %}
