added background tiling to body. navbar and deploycard have semi-transparent lightgrey backgrounds

--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -14,6 +14,8 @@ html {
 
 body {
     height: 100%;
+    background-image: url('/static/img/spacetile.jpg');
+    background-repeat: repeat;
 }
 
 
@@ -30,20 +32,19 @@ header.Banner {
     display: flex;
     justify-content: space-around;
     padding: 1.5rem;
-    background-color: grey;
-    text-transform: uppercase;
-    font-size: 1.5rem;
+    border-bottom: 2px solid black;
 }
 
 h1.BannerText {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
     text-transform: uppercase;
+    color: white;
 }
 
 nav.Navigation {
     display: flex;
-    background-color: lightgrey;
+    background-color: rgba(211,211,211, 0.75);
 }
 
 nav.Navigation > a {
@@ -54,6 +55,11 @@ nav.Navigation > a {
     text-decoration: none;
     font-size: 0.9rem;
     padding: 0.75rem;
+    text-transform: uppercase;
+}
+
+nav.Navigation > a + a {
+    border-left: 2px solid black;
 }
 
 nav.Navigation > a:hover {
@@ -123,7 +129,7 @@ div.DeployedCard {
     height: 400px;
     display: flex;
     flex-flow: column;
-    background-color: lightgray;
+    background-color: rgba(211,211,211, 0.75);
     border-radius: 1rem;
 }
 
@@ -138,9 +144,14 @@ div#view {
 div.DeployedCardImage {
     width: 150px;
     height: 150px;
+    border-radius: 1rem;
     background-color: white;
     margin: 1rem;
     flex-shrink: 0;
+}
+
+img#img {
+    border-radius: 1rem;
 }
 
 div.DeployedCardMessage {
@@ -166,8 +177,8 @@ div.Loot {
 }
 
 div.DeployedCardButtonGroup {
-    background-color: grey;
     border-radius: 0 0 1rem 1rem;
+    border-top: 2px solid black;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
