--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -5,7 +5,7 @@
 <div class='Game'>
 
     <header class='Banner'>
-        <h1>Callisto</h1>
+        <h1 class='BannerText'>Callisto</h1>
     </header>
 
     <nav class='Navigation'>
