added login url constant to settings. added custom urls for login and logout. updated styling to deployment card. added styling to login page and form. game banner now redirects to /game on click

--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -19,7 +19,34 @@ body {
 }
 
 
-/* Main UI styles */
+/* Authentication Views */
+
+div.LoginContainer {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+form.LoginForm {
+    background-color: rgba(211,211,211, 0.9);
+    border-radius: 1rem;
+    width: 50%;
+    padding: 3rem;
+}
+
+p.LoginError {
+    background-color: rgba(211,211,211, 0.9);
+    border-radius: 1rem;
+    width: 50%;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+
+/* Main Game UI */
 
 div.Game {
     display: flex;
@@ -40,6 +67,7 @@ h1.BannerText {
     font-weight: bold;
     text-transform: uppercase;
     color: white;
+    cursor: pointer;
 }
 
 nav.Navigation {
@@ -115,7 +143,7 @@ ul.MechEquipment > li, ul.MechStatBlock > li {
 }
 
 
-/* Deployment / Outlands */
+/* Deployment */
 
 div.Deployed {
     display: flex;
@@ -156,14 +184,24 @@ img#img {
 
 div.DeployedCardMessage {
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+div.DeployedCardMessage > h2, div.DeployedCardMessage > p {
+    background-color: rgba(211,211,211, 0.6);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
 }
 
 h2.DeployedCardTitle {
     font-size: 1.125rem;
+    text-align: center;
 }
 
 p.DeployedCardText {
     margin: 1rem 0;
+    flex: 1;
 }
 
 div.Arena {
